--- a/FlightManagementSystem/src/app/app.component.html
+++ b/FlightManagementSystem/src/app/app.component.html
@@ -12,6 +12,15 @@
       <li class="nav-item">
         <a routerLink="view-flight" class="nav-link" class="btn btn-primary active" role="button">VIEW FLIGHTS</a>
       </li>
+      <li class="nav-item">
+        <a routerLink="search-flight" class="nav-link" class="btn btn-primary active" role="button">SEARCH FLIGHT</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="add-airport" class="nav-link" class="btn btn-primary active" role="button">ADD AIRPORT</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="view-airport" class="nav-link" class="btn btn-primary active" role="button">VIEW AIRPORTS</a>
+      </li>
     </ul>
     </nav>
     <router-outlet></router-outlet>
