--- a/FlightManagementSystem/src/app/add-flight/add-flight.component.html
+++ b/FlightManagementSystem/src/app/add-flight/add-flight.component.html
@@ -2,17 +2,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
-<h3>Add Student</h3>  
+<h3>Add Flight</h3>  
 <div class="row">  
   <div class="col-sm-4"></div>  
   <div class="col-sm-4" >  
     <div [hidden]="submitted" style="width: 400px;">  
-      <form [formGroup]="flightSaveForm" #saveFlight (ngSubmit)="saveFlight(saveFlight)">  
+      <form [formGroup]="flightSaveForm" #saveflight (ngSubmit)="saveFlight(saveFlight)">  
 
         
         <div class="form-group">  
-            <label for="name">Flight Number</label>  
-            <input type="number" class="form-control"  formControlName="flight_number" data-toggle="tooltip"   
+            <label for="flightNumber">Flight Number</label>  
+            <input type="number" class="form-control"  formControlName="flightNumber" data-toggle="tooltip"   
                data-placement="right" title="Enter Flight Number" >  
             <div class="alert alert-danger" *ngIf = "(FlightNumber.touched) && (FlightNumber.invalid)"   
               style="margin-top: 5px;">  
@@ -25,8 +25,8 @@
 
 
           <div class="form-group">  
-              <label for="name">Flight Model</label>  
-              <input type="text" class="form-control"  formControlName="flight_model" data-toggle="tooltip"   
+              <label for="flightModel">Flight Model</label>  
+              <input type="text" class="form-control"  formControlName="flightModel" data-toggle="tooltip"   
                  data-placement="right" title="Enter Flight Model" >  
               <div class="alert alert-danger" *ngIf = "(FlightModel.touched) && (FlightModel.invalid)"   
                 style="margin-top: 5px;">  
@@ -38,8 +38,8 @@
           </div>  
     
           <div class="form-group">  
-              <label for="name">Carrier Name</label>  
-              <input type="text" class="form-control" formControlName="carrier_name"   
+              <label for="carrierName">Carrier Name</label>  
+              <input type="text" class="form-control" formControlName="carrierName"   
                 data-toggle="tooltip" data-placement="right" title="Enter carrier name">  
                 <div class="alert alert-danger" *ngIf = "(CarrierName.touched) && (CarrierName.invalid)"   
                 style="margin-top: 5px;">  
@@ -54,8 +54,8 @@
           </div>  
     
           <div class="form-group">  
-            <label for="name">Seat Capacity</label>  
-            <input type="number" class="form-control" formControlName="seat_capacity"   
+            <label for="seatCapacity">Seat Capacity</label>  
+            <input type="number" class="form-control" formControlName="seatCapacity"   
               data-toggle="tooltip" data-placement="right" title="Enter flight seat capacity">  
               <div class="alert alert-danger" *ngIf = "(SeatCapacity.touched) && (SeatCapacity.invalid)"   
               style="margin-top: 5px;">  
@@ -68,7 +68,7 @@
                 </span>                         
               </div>  
         </div>  
-          <button type="submit" class="btn btn-success"(click)="save()">Submit</button>  
+          <button type="submit" class="btn btn-success" >Submit</button>  
       </form>  
   </div>  
   </div>  
@@ -78,8 +78,8 @@
   <div class="col-sm-4"></div>  
   <div class="col-sm-4">  
       <div [hidden]="!submitted">  
-         <h4>Student Added SuccessFully!</h4>  
-         <button (click)="addFlightForm()" class='btn btn-primary'>Add More Flights</button>
+         <h4>Flight Added SuccessFully!</h4>  
+         <button routerLink="add-airport"  class='btn btn-primary'>Add More Flights</button>
       </div>        
   </div>  
   <div class="col-sm-4"></div>  
