--- a/FlightManagementSystem/src/app/users-home/users-home.component.html
+++ b/FlightManagementSystem/src/app/users-home/users-home.component.html
@@ -1,8 +1,16 @@
+
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <div class="container-fluid">
-    <h1 align="center">Flight Management System</h1>
+    <nav class="navbar navbar-expand-sm bg-light navbar-dark">
+      <ul class="navbar-nav ">
+    
+        <li class="nav-item ">
+            <a routerLink=view-users class="nav-link" class="btn btn-primary active" role="button" >VIEW USERS</a>
+          </li>
+    </ul>
+    </nav>
     <router-outlet></router-outlet>
 </div>
