--- a/FlightManagementSystem/src/app/view-flight/view-flight.component.html
+++ b/FlightManagementSystem/src/app/view-flight/view-flight.component.html
@@ -60,21 +60,42 @@
                     <input type="hidden" class="form-control"  formControlName="flightNumber" [(ngModel)]="flight.flightNumber">  
                             <div class="form-group">  
                                 <label for="flightNumber">Flight Number</label>  
-                                <input type="number" class="form-control"readonly=true formControlName="flightNumber" [(ngModel)]="flight.flightNumber"  >  
+                                <input type="number" class="form-control"readonly=true formControlName="flightNumber" [(ngModel)]="flight.flightNumber"  > 
                             </div>  
                       
                             <div class="form-group">  
                                 <label for="flightModel">Flight Model</label>  
                                 <input type="text" class="form-control" formControlName="flightModel" [(ngModel)]="flight.flightModel">  
+                             <div class="alert alert-danger" *ngIf = "(FlightModel.touched) && (FlightModel.invalid)"   
+                               style="margin-top: 5px;">  
+                               <span *ngIf="FlightModel.errors.required">Flight Model is required</span>  
+                               <span *ngIf = "FlightModel.errors.minlength">MinLength 4 characters</span>
+                               <span *ngIf="FlightModel.errors.maxlength">Max length 10 characters</span>
+                               <span *ngIf="FlightModel.errors.pattern">No special characters allowed</span>
+                              </div>  
                             </div>  
                       
                             <div class="form-group">  
                                 <label for="carrierName">Carrier Name</label>  
                                 <input type="text" class="form-control" formControlName="carrierName" [(ngModel)]="flight.carrierName">  
+                                <div class="alert alert-danger" *ngIf = "(CarrierName.touched) && (CarrierName.invalid)"   
+                                  style="margin-top: 5px;">  
+                                  <span *ngIf="CarrierName.errors.required">CarrierName  is required</span>
+                                  <span *ngIf = "CarrierName.errors.minlength"> MinLength Error </span>    
+                                  <span *ngIf = "CarrierName.errors.maxlength">MaxLength Error</span>                     
+                                  <span *ngIf="CarrierName.errors.pattern">No special character and number is allowed</span>
+                                </div>   
                             </div> 
                             <div class="form-group">  
                                 <label for="seatCapacity">seatCapacity</label>  
                                 <input type="number" class="form-control"  formControlName="seatCapacity" [(ngModel)]="flight.seatCapacity"  >  
+                                <div class="alert alert-danger" *ngIf = "(SeatCapacity.touched) && (SeatCapacity.invalid)"   
+                                  style="margin-top: 5px;">  
+                                  <span *ngIf="SeatCapacity.errors.required">Seat Capacity must not be null</span>
+                                  <span *ngIf = "SeatCapacity.errors.min">seat capacity must be between 2-1000</span>
+                                  <span *ngIf = "SeatCapacity.errors.max">Max Error:Seat capacity must be between 2-1000</span>                         
+                                 <span *ngIf="SeatCapacity.errors.pattern">Only number is allowed</span>
+                                </div> 
                             </div>               
                   </div>    
                  <div [hidden]="!isupdated">  
@@ -85,8 +106,8 @@
               
             <!-- Modal footer -->  
           <div class="modal-footer" >  
-              <button type="submit" class="btn btn-success" [hidden]="isupdated">Update</button>  
-              <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="changeisUpdate()">Close</button>  
+              <button [disabled]="!flightupdateform.valid" type="submit" class="btn btn-success" [hidden]="isupdated">Update</button>  
+              <button  type="button" class="btn btn-danger" data-dismiss="modal" (click)="changeisUpdate()">Close</button>  
             </div>  
         
         </form>  
